--- a/client/style.css
+++ b/client/style.css
@@ -1,21 +1,62 @@
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap');
+
 html, body {
   height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
+  font-family: 'Kumbh Sans', sans-serif;
 }
 
-#top {
-  text-align: center;
-  margin: 0 auto;
+input[type=submit] {
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 0.8em;
+    padding: 0.5em;
 }
 
-#top h1 {
-  font-size: 2em;
+input[type=text] {
+    width: 10em;
 }
 
-#content {
+#top, #bottom {
+ /* text-align: center;
+  margin: 0 auto; */
+    display: flex;
+    justify-content: center;
+    height: 40%;
+}
+
+#intro {
+    text-align: center;
+}
+
+h1 {
+    font-size: 2em;
+}
+
+span {
+    font-size: 1.2em;
+    display: inline-block;
+    margin-right: 3em;
+}
+
+/*#content {
   margin-top: 100px;
   font-size: 2em;
   text-align: center;
+}*/
+
+.boxes {
+    background-color: lightblue;
+    padding-right: 1.5em;
+    padding-left: 1.5em;
+    padding-bottom: 0.5em;
+    padding-top: 0.5em;
+    display: inline-block;
+    margin: 1em;
+    width: 25%;
+}
+
+.boxes label {
+    font-size: 1.2em;
 }
