--- a/client/style.css
+++ b/client/style.css
@@ -49,11 +49,9 @@ span {
     margin-right: 3em;
 }
 
-/*#content {
-  margin-top: 100px;
-  font-size: 2em;
-  text-align: center;
-}*/
+#content {
+    text-align: center;
+}
 
 #div1 {
     background-color: #cfecff;
