--- a/client/style.css
+++ b/client/style.css
@@ -14,8 +14,20 @@ input[type=submit], input[type=button] {
     padding: 0.5em;
 }
 
-input[type=text] {
-    width: 10em;
+input[type=text], input[type=number] {
+    width: 15em;
+    border: none;
+    border-bottom: 2px solid #7a7a7a;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 0.4em;
+    font-family: 'Kumbh Sans', sans-serif;
+}
+
+input[type=text]:focus, input[type=number]:focus {
+    border: none;
+    outline: none;
+    border-bottom: 2px solid black;
+    background-color: rgb(255, 255, 255);
 }
 
 .goal {
@@ -28,8 +40,6 @@ input[type=text] {
 }
 
 #top, #bottom {
- /* text-align: center;
-  margin: 0 auto; */
     display: flex;
     justify-content: center;
     height: 40%;
@@ -51,22 +61,34 @@ span {
 
 #content {
     text-align: center;
+    position: fixed;
+    top: 48%;
+    left: 33%;
+    background-color: rgba(242, 242, 242, 0.8);
+    padding-left: 2em;
+    padding-right: 2em;
+    padding-top: 1em;
+    width: 400px;
 }
 
 #div1 {
     background-color: #cfecff;
+    text-align: center;
 }
 
 #div2 {
     background-color: #ffe7c9;
+    text-align: center;
 }
 
 #div3 {
     background-color: #cfffd5;
+    text-align: center;
 }
 
 #div4 {
     background-color: #e3cfff;
+    text-align: center;
 }
 
 .boxes {
