adding rest implementation and animated gifs

--- a/client/style.css
+++ b/client/style.css
@@ -108,3 +108,12 @@ span {
 ul {
     text-align: left;
 }
+
+ul li b {
+    text-transform: capitalize;
+}
+
+img {
+    margin-left: auto;
+    margin-right: auto;
+}
