--- a/client/style.css
+++ b/client/style.css
@@ -8,6 +8,13 @@ html, body {
   font-family: 'Kumbh Sans', sans-serif;
 }
 
+#intro {
+    width: 75%;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+}
+
 input[type=submit], input[type=button] {
     font-family: 'Kumbh Sans', sans-serif;
     font-size: 0.8em;
@@ -116,4 +123,19 @@ ul li b {
 img {
     margin-left: auto;
     margin-right: auto;
+}
+
+#waterIcon {
+    padding-top: 90px;
+}
+
+#exerciseIcon {
+    padding-top: 50px;
+}
+
+/*make sure the height is big enough for each section on a small screen*/
+@media only screen and (max-width: 1600px) {
+  #top, #bottom {
+    height: 60%;
+}
 }
