--- a/client/style.css
+++ b/client/style.css
@@ -60,12 +60,6 @@ h1 {
     font-size: 2em;
 }
 
-span {
-    font-size: 1.2em;
-    display: inline-block;
-    margin-right: 3em;
-}
-
 #content {
     text-align: center;
     position: fixed;
@@ -133,8 +127,29 @@ img {
     padding-top: 50px;
 }
 
+#goalSection {
+    text-align: center;
+    position: absolute;
+    top: 40%;
+    left: 40%;
+    z-index: 40;
+    background-color: #e6e6e6;
+    padding-left: 2em;
+    padding-right: 2em;
+}
+
+#goalSection input[type=button] {
+    margin-left: 0.15em;
+    margin-right: 0.15em;
+}
+
+#goalSection .goalName {
+    text-align: left;
+    font-size: 0.9em;
+}
+
 /*make sure the height is big enough for each section on a small screen*/
-@media only screen and (max-width: 1600px) {
+@media only screen and (max-width: 1550px) {
   #top, #bottom {
     height: 60%;
 }
